--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             </h1>
             <h3>Pro web developer</h3>
             <p>The birds have "windows" for heat loss, around their eyes, shoulder joints, feet and legs. This study, led by George Fox University in Oregon, US, is part of a Nasa-funded project to uncover the effects of climate change on the birds. The
-                results are published in the journal Royal Society Open Science.</p>
-
-
+                results are published in the journal Royal Society Open Science</p>
+            <a class="link" target="_blank" href="https://github.com/SamiaAkter/practice-repo">Hire me</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="Pic of Jhankar Mahbub">
