--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="top banner flexible-area">
+    <section class="top-banner flexible-area">
         <div class="half-width">
             <h1>Welcome to <span>Jhankar's</span> world
             </h1>
@@ -24,16 +24,47 @@
 
 
         </div>
+    </section>
 
-
-
-
-
+    <section class="Dream-big flexible-area">
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="Pic of Jhankar Mahbub"></div>
+        <div class="half-width">
+            <h1>Welcome to <span>Jhankar's</span> world
+            </h1>
+            <h3>Pro web developer</h3>
+            <p>The birds have "windows" for heat loss, around their eyes, shoulder joints, feet and legs. This study, led by George Fox University in Oregon, US, is part of a Nasa-funded project to uncover the effects of climate change on the birds. The
+                results are published in the journal Royal Society Open Science</p>
+            <a class="link" target="_blank" href="https://github.com/SamiaAkter/practice-repo">First Web Page</a>
+        </div>
 
 
 
 
     </section>
+    <section class="experience-area">
+        <h1>Exerience</h1>
+        <div class="flexible-area">
+            <div class="experience-item">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="orange-color">2024-present| Expert as a Web Developer</h3>
+                <p>I join in a well known company as a Web develpoer.I also do freelencing as my part time business.I also teach people, about the programming language on you tube. I also open an institution where people can complete their web development
+                    course to become a developer.</p>
+
+            </div>
+            <div class="experience-item">
+                <h1>Baby web developer</h1>
+                <h3 class="orange-color">2022-2024| programming hero learner</h3>
+                <p>I started doing a course in programming hero's website to learn web development.They planned e course for beginners where they teach basic knowledge about html,css and java .there course will be continued 4 month.The main course teacher
+                    jhankar mahbub teaches this language beautifully.</p>
+            </div>
+
+        </div>
+
+
+
+    </section>
+    <footer>this is end</footer>
 </body>
 
 </html>
